--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
 <title>alfred.unicodebuilder</title>
+<style>body { background-color: #F8F8F8; }</style>
 <div class="container">
 <h1>alfred.unicodebuilder</h1>
 <p>Laterst version: <a href="UnicodeBuilder.alfredworkflow" class="btn btn-primary btn-small">Download</a></p>
 <p>See also: <a href="https://github.com/kosugi/alfred.unicodebuilder">our repository</a></p>
+<h2>Screenshot</h2>
+<p><img src="ss.png" class="img-rounded"></p>
 </div>
