--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <div class="container">
 <h1>alfred.unicodebuilder</h1>
 <p>Latest version: <a href="UnicodeBuilder.alfredworkflow" class="btn btn-primary btn-small">Download</a></p>
+<p>Details (ja): <a href="http://blog.livedoor.jp/kosugip/archives/1719584.html">http://blog.livedoor.jp/kosugip/archives/1719584.html</a></p>
 <p>See also: <a href="https://github.com/kosugi/alfred.unicodebuilder">our repository</a></p>
 <h2>Screenshot</h2>
 <p><img src="ss.png" class="img-rounded"></p>
