accepted also codepoints outside of the BMP.

--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <p>See also: <a href="https://github.com/kosugi/alfred.unicodebuilder">our repository</a></p>
 <h2>Screenshot</h2>
 <p><img src="ss.png" class="img-rounded"></p>
+<p><img src="ss2.png" class="img-rounded"></p>
 </div>
