added screenshots for query feature

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <p>Latest version: <a href="UnicodeBuilder.alfredworkflow" class="btn btn-primary btn-small">Download</a> / <a href="https://github.com/kosugi/alfred.unicodebuilder/commits/gh-pages/UnicodeBuilder.alfredworkflow">History</a></p>
 <p>Details (ja): <a href="http://blog.livedoor.jp/kosugip/archives/1719584.html">http://blog.livedoor.jp/kosugip/archives/1719584.html</a></p>
 <p>See also: <a href="https://github.com/kosugi/alfred.unicodebuilder">our repository</a></p>
-<h2>Screenshot</h2>
+<h2>Screenshots</h2>
 <p><img src="ss.png" class="img-rounded"></p>
 <p>also accepts codepoints outside of the BMP.</p>
 <p><img src="ss2.png" class="img-rounded"></p>
+<p>“unicode” keyword allows you to query by unicode name</p>
+<p><img src="ss3.png" class="img-rounded"></p>
+<p>also you can reverse query</p>
+<p><img src="ss4.png" class="img-rounded"></p>
 </div>
